{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 60,
  "lineage": "fb0a69a8-f0be-f5e0-708d-84d277d03226",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:877757016492:listener/app/node-hello-world-dev-alb/311af7b31970621f/ce94c15f78bb902b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:877757016492:targetgroup/node-hello-world-dev-target-grp/c783e074004a1adc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:877757016492:listener/app/node-hello-world-dev-alb/311af7b31970621f/ce94c15f78bb902b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:877757016492:loadbalancer/app/node-hello-world-dev-alb/311af7b31970621f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb_target_group.tg",
            "aws_lb.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:877757016492:targetgroup/node-hello-world-dev-target-grp/c783e074004a1adc",
            "arn_suffix": "targetgroup/node-hello-world-dev-target-grp/c783e074004a1adc",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:877757016492:targetgroup/node-hello-world-dev-target-grp/c783e074004a1adc",
            "lambda_multi_value_headers_enabled": false,
            "name": "node-hello-world-dev-target-grp",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-000a39cf2f14daeab",
            "domain": "vpc",
            "id": "eipalloc-0fa88406395c3a6a9",
            "network_interface": "eni-0846c0ff5de96eb61",
            "private_dns": "ip-10-0-0-73.eu-west-1.compute.internal",
            "private_ip": "10.0.0.73",
            "public_dns": "ec2-63-35-246-104.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.35.246.104",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-031f63a1bf70bcc0a",
            "domain": "vpc",
            "id": "eipalloc-0d7eef1d76b499882",
            "network_interface": "eni-079118f7aa40a2215",
            "private_dns": "ip-10-0-1-26.eu-west-1.compute.internal",
            "private_ip": "10.0.1.26",
            "public_dns": "ec2-18-203-164-204.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.203.164.204",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05d59046b4b7f4c8b",
            "owner_id": "877757016492",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-ig"
            },
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:877757016492:loadbalancer/app/node-hello-world-dev-alb/311af7b31970621f",
            "arn_suffix": "app/node-hello-world-dev-alb/311af7b31970621f",
            "dns_name": "node-hello-world-dev-alb-1254217548.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:877757016492:loadbalancer/app/node-hello-world-dev-alb/311af7b31970621f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-hello-world-dev-alb",
            "security_groups": [
              "sg-0f8bb1aed17aa38c9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-087f3349d6f98d160"
              },
              {
                "subnet_id": "subnet-0b5d84a416c5a2ff9"
              }
            ],
            "subnets": [
              "subnet-087f3349d6f98d160",
              "subnet-0b5d84a416c5a2ff9"
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-0e58273ba74b7e8a8",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_security_group.alb_sg",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa88406395c3a6a9",
            "id": "nat-0934cbbaea48afc49",
            "network_interface_id": "eni-0846c0ff5de96eb61",
            "private_ip": "10.0.0.73",
            "public_ip": "63.35.246.104",
            "subnet_id": "subnet-0b5d84a416c5a2ff9"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7eef1d76b499882",
            "id": "nat-0ff43f35a6296a9b7",
            "network_interface_id": "eni-079118f7aa40a2215",
            "private_ip": "10.0.1.26",
            "public_ip": "18.203.164.204",
            "subnet_id": "subnet-087f3349d6f98d160"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06db92aa78914e470",
            "owner_id": "877757016492",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0934cbbaea48afc49",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-private-routes"
            },
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-020abe7157d92c376",
            "owner_id": "877757016492",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ff43f35a6296a9b7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-private-routes"
            },
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0be8c34757c297517",
            "owner_id": "877757016492",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d59046b4b7f4c8b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-public-routes"
            },
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ac8c3288f2967859",
            "owner_id": "877757016492",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d59046b4b7f4c8b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-public-routes"
            },
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2173032f7726fec",
            "route_table_id": "rtb-06db92aa78914e470",
            "subnet_id": "subnet-07a61547e415fce32"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0946f384b0ca48b89",
            "route_table_id": "rtb-020abe7157d92c376",
            "subnet_id": "subnet-0e6ee1c073b7c4c81"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005f82e0615f37a53",
            "route_table_id": "rtb-0be8c34757c297517",
            "subnet_id": "subnet-0b5d84a416c5a2ff9"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c4a325e36f81ad7",
            "route_table_id": "rtb-0ac8c3288f2967859",
            "subnet_id": "subnet-087f3349d6f98d160"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:877757016492:security-group/sg-0f8bb1aed17aa38c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8bb1aed17aa38c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node-hello-world-dev-alb-sg",
            "name_prefix": null,
            "owner_id": "877757016492",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:877757016492:security-group/sg-0c5dad64f27b81abf",
            "description": "Allow egress from container",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5dad64f27b81abf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f8bb1aed17aa38c9"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "node-hello-world-dev-ecs-service-sg",
            "name_prefix": null,
            "owner_id": "877757016492",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:877757016492:subnet/subnet-07a61547e415fce32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-07a61547e415fce32",
            "map_public_ip_on_launch": false,
            "owner_id": "877757016492",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-private-subnet-0"
            },
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:877757016492:subnet/subnet-0e6ee1c073b7c4c81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0e6ee1c073b7c4c81",
            "map_public_ip_on_launch": false,
            "owner_id": "877757016492",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-private-subnet-1"
            },
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:877757016492:subnet/subnet-0b5d84a416c5a2ff9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b5d84a416c5a2ff9",
            "map_public_ip_on_launch": false,
            "owner_id": "877757016492",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-public-subnet-0"
            },
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:877757016492:subnet/subnet-087f3349d6f98d160",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-087f3349d6f98d160",
            "map_public_ip_on_launch": false,
            "owner_id": "877757016492",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-public-subnet-1"
            },
            "vpc_id": "vpc-0e58273ba74b7e8a8"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:877757016492:vpc/vpc-0e58273ba74b7e8a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0090b4789aada9b37",
            "default_route_table_id": "rtb-06f7f7d5c657ec3ff",
            "default_security_group_id": "sg-0f9826fa262972912",
            "dhcp_options_id": "dopt-08d8c46d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e58273ba74b7e8a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06f7f7d5c657ec3ff",
            "owner_id": "877757016492",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "node-hello-world-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}